[project]
name = "extract-grm"
version = "0.1.0"
description = ""
authors = [
    {name = "squidrat",email = "squid@rat.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "luadata (>=1.0.5,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
